--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev":"ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -12,6 +12,9 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.8",
+    "typeorm": "^0.3.6"
   }
 }
